# QtFFmpeg

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  VideoPlayer.ui
backup/: About.ui
include/: About.h  MainWindow.h  VideoPlayThread.h  VideoPlayer.h  VideoPlayer.h.aide.h
include/SDL2/: SDL_config.h  SDL_revision.h
lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la  libavdevice.so.61.3.100  libavformat.so.61.7.100  libavutil.so.59.39.100  libfdk-aac.la  libmp3lame.la  libmp3lame.so.0.0.0  libpostproc.so.58.3.100  libspeex.la  libspeex.so.1.5.2  libswresample.so.5.3.100  libswscale.so.8.3.100  libx264.so.164
lib/cmake/SDL2/: sdl2-config-version.cmake
lib/pkgconfig/: fdk-aac.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc  sdl2.pc  speex.pc  x264.pc
src/: About.cpp  MainWindow.cpp  VideoPlayThread.cpp  VideoPlayer.cpp  VideoPlayer.ui  VideoPlayer.ui.autosave  main.cpp
ui/: MainWindow.ui  VideoPlayer.ui
